fullSandbox11072023/force-app/main/default/objects/Element__c/Element__c.object-meta.xml
<CustomObject>
    <label>Element</label>
    <nameField>
        <displayFormat>E{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>