fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Assumption__c.field-meta.xml
<CustomField>
    <fullName>Assumption__c</fullName>
    <label>Assumption</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>