fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <label>Benefit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>