fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <label>Dependency</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>