fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>