fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>Design</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>