fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Task Due Date</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>