fullSandbox11072023/force-app/main/default/objects/Element__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Element is complete, canceled, or otherwise will not be actioned.</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>