fullSandbox11072023/force-app/main/default/objects/Element__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <inlineHelpText>Level of Effort</inlineHelpText>
    <label>LOE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>