fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Out_of_Scope__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Scope__c</fullName>
    <label>Out of Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>