fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; User_Story__r.Project__r.Id , User_Story__r.Project__r.Name , &quot;_self&quot;)</formula>
    <label>Initiative</label>
    <type>Text</type>
</CustomField>