fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>