fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <formula>User_Story__r.Sprint__r.Name</formula>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>