fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Testing_Steps__c.field-meta.xml
<CustomField>
    <fullName>Testing_Steps__c</fullName>
    <label>Testing Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>