fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assumption</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
            <value>
                <fullName>Wish List</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>