fullSandbox11072023/force-app/main/default/objects/Element__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>Story #</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Elements</relationshipLabel>
    <relationshipName>Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>