fullSandbox11072023/force-app/main/default/objects/Element__c/fields/UserStoryText__c.field-meta.xml
<CustomField>
    <fullName>UserStoryText__c</fullName>
    <formula>User_Story__r.User_Story__c</formula>
    <label>Story</label>
    <type>Text</type>
</CustomField>