fullSandbox11072023/force-app/main/default/objects/Element__c/fields/Wish_List__c.field-meta.xml
<CustomField>
    <fullName>Wish_List__c</fullName>
    <label>Wish List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>