fullSandbox11072023/force-app/main/default/objects/Element__c/recordTypes/Code.recordType-meta.xml
<RecordType>
    <fullName>Code</fullName>
    <active>true</active>
    <label>Code</label>
</RecordType>