fullSandbox11072023/force-app/main/default/objects/Element__c/recordTypes/Detail.recordType-meta.xml
<RecordType>
    <fullName>Detail</fullName>
    <active>true</active>
    <label>Detail</label>
</RecordType>