fullSandbox11072023/force-app/main/default/objects/Element__c/recordTypes/Release_Note.recordType-meta.xml
<RecordType>
    <fullName>Release_Note</fullName>
    <active>true</active>
    <label>Release Note</label>
</RecordType>