fullSandbox11072023/force-app/main/default/objects/Element__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <label>Task</label>
</RecordType>