fullSandbox11072023/force-app/main/default/objects/Element__c/validationRules/UserStory_complete_cant_chg_Test_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>UserStory_complete_cant_chg_Test_Status</fullName>
    <active>true</active>
    <description>For Element.RecordType = Test when the related Story.Status = Complete: 

Prevents user from changing the Test Status from Passed back to In Progress or Not Started.</description>
    <errorConditionFormula>RecordType.Name == &quot;Test&quot; 
&amp;&amp;
ISPICKVAL(User_Story__r.Status__c , &quot;Complete&quot;) 
&amp;&amp; 
ISPICKVAL(PRIORVALUE(Status__c) , &quot;Passed&quot;) 
&amp;&amp; 
OR( 
ISPICKVAL(Status__c , &quot;In Progress&quot;) 
, 
ISPICKVAL(Status__c , &quot;Not Started&quot;) 
, 
ISPICKVAL(Status__c , &quot;Failed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The related Story has already been marked as Complete, so you can not revert this Test to a not passed Status UNLESS you first change the Story Status back to In Sprint. 

Click Cancel or change Status back to Passed to continue.</errorMessage>
</ValidationRule>