fullSandbox11072023/force-app/main/default/objects/Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>