fullSandbox11072023/force-app/main/default/objects/Element__c/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Element__c.Detail</value>
    </filters>
    <label>All Details</label>
    <language>en_US</language>
</ListView>