fullSandbox11072023/force-app/main/default/objects/Element__c/listViews/All_Tests.listView-meta.xml
<ListView>
    <fullName>All_Tests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Testing_Steps__c</columns>
    <columns>Results__c</columns>
    <columns>Project__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Element__c.Test</value>
    </filters>
    <label>All Tests</label>
    <language>en_US</language>
</ListView>