fullSandbox11072023/force-app/main/default/objects/Element__c/listViews/My_Tasks_All.listView-meta.xml
<ListView>
    <fullName>My_Tasks_All</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Sprint__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Results__c</columns>
    <columns>LOE__c</columns>
    <columns>Completed_By__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Element__c.Task</value>
    </filters>
    <filters>
        <field>IsOwner__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </filters>
    <label>My Tasks All</label>
    <language>en_US</language>
</ListView>