fullSandbox11072023/force-app/main/default/objects/Element__c/listViews/My_Tests_Not_Validated.listView-meta.xml
<ListView>
    <fullName>My_Tests_Not_Validated</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Testing_Steps__c</columns>
    <columns>Results__c</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Element__c.Test</value>
    </filters>
    <filters>
        <field>IsOwner__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Failed</value>
    </filters>
    <label>My Tests Not Validated</label>
    <language>en_US</language>
</ListView>